syntax = "proto3";

package service;

import "user_signin.proto";
import "user_signup.proto";
import "user.proto";

service UserService {
    rpc getUser(UserRequest) returns (UserResponse) {}
    rpc userSignIn(UserSignInRequest) returns (UserSignInResponse) {}
    rpc userSignUp(UserSignUpRequest) returns (UserSignUpResponse) {}
}