syntax = "proto3";

package service;

import "user.proto";
import "error.proto";

message UserSignUpRequest {
	string name = 1;
	string email = 2;
	string password = 3;
}

message UserSignUpResponse { 
	oneof response {    
		User user = 1; 
		Error error = 2;
	}
}

